Fixed spacingissue on list

--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -7,6 +7,7 @@
 @use "system/visibility";
 @use "components/links/link/mixins";
 @use "sass:math";
+@use "sass:map";
 
 .osg-button-menu {
   @extend %osg-padding-2, %osg-padding-horizontal-4-breakpoint-large;
@@ -76,7 +77,7 @@
 
     &::before {
       font-family: "Oslo Icons", Arial, Helvetica, sans-serif !important;
-      content: map-get(icon-map.$icons, "menu") !important;
+      content: map.get(icon-map.$icons, "menu") !important;
     }
   }
 
@@ -111,7 +112,7 @@
 
     & .osg-button-menu__icon {
       &::before {
-        content: map-get(icon-map.$icons, "close") !important;
+        content: map.get(icon-map.$icons, "close") !important;
       }
     }
   }
@@ -155,8 +156,6 @@
   }
 
   &__list-animate {
-    // @extend %osg-padding-top-4;
-
     max-height: 0;
     overflow: hidden;
 
@@ -165,7 +164,7 @@
     }
 
     ul {
-      @extend %osg-padding-left-4, %osg-padding-left-0-breakpoint-medium, %osg-padding-top-4;
+      @extend %osg-padding-left-4, %osg-padding-left-0-breakpoint-medium, %osg-padding-top-4, %osg-padding-bottom-4, %osg-padding-bottom-0-breakpoint-medium;
     }
 
     &--open {
@@ -236,6 +235,10 @@
       background-color: unset;
       hyphens: auto;
       flex-wrap: wrap;
+    }
+
+    li:first-child {
+      @extend %osg-padding-top-4, %osg-padding-top-0-breakpoint-medium;
     }
 
     li:last-child {
